--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,8 @@
 
 @charset "utf-8";
 
-$link-color: red;
+$link-color: black;
+$link-color-hover: red;
 
 .page__lead {
   font-family: $global-font-family;
