--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,9 +5,9 @@
 @charset "utf-8";
 
 $link-color: black;
-$link-color-hover: red;
+$link-color-hover: blue;
 
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'contrast' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
