--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,10 +4,21 @@
 
 @charset "utf-8";
 
+
+// ----- Font ----- //
+
+$serif              : "PT Serif", Georgia, Times, serif;
+$sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+
+$global-font-family : $serif;
+$header-font-family : $sans-serif-narrow;
+
+
 $link-color: black;
 $link-color-hover: blue;
 
+// ----- Import ----- //
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'contrast' }}"; // skin
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
