--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,1 +1,3 @@
-<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic" rel="stylesheet" type="text/css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
