--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,14 +16,34 @@ $header-font-family : $monospace;
 
 $link-color-hover: #45f34f;
 
-.masthead {
-  font-family: $monospace;
-}
-
-
 // ----- Import ----- //
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
 
+html {
+  font-size: 12px; // change to whatever
+
+  @include breakpoint($medium) {
+    font-size: 14px; // change to whatever
+  }
+
+  @include breakpoint($large) {
+    font-size: 16px; // change to whatever
+  }
+
+  @include breakpoint($x-large) {
+    font-size: 18px; // change to whatever
+  }
+}
+
+
+.masthead {
+  font-family: $monospace;
+}
+
+&:hover .header-link {
+      opacity: 1;
+      color: $link-color-hover
+    }
