--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,8 +18,8 @@ $link-color-hover: #45f34f;
 
 // ----- Import ----- //
 
-// @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-// @import "minimal-mistakes"; // main partials
+ @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+ @import "minimal-mistakes"; // main partials
 
 .masthead {
   font-family: $monospace;
