--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,3 +18,13 @@ $link-hover-color: #0f7;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+/* type scale */
+$type-size-1: 1em !default; // ~39.056px
+$type-size-2: .8em !default; // ~31.248px
+$type-size-3: .7em !default; // ~25.008px
+$type-size-4: .6em !default; // ~20px
+$type-size-5: .5em !default; // ~16px
+$type-size-6: 0.4em !default; // ~12px
+$type-size-7: 0.3em !default; // ~11px
+$type-size-8: 0.2em !default; // ~10px
