--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,8 +13,10 @@ $monospace  : "Share Tech Mono", monospace;
 
 $global-font-family : $sans-serif; 
 $header-font-family : $monospace;
+
 $background-color: white;
-$link-hover-color: #0f7;
+$link-color-hover: #0f7;
+$link-color: black;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
