--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,8 +16,8 @@ $header-font-family : $monospace;
 
 $primary-color: #0f7;
 
-// @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'dark' }}"; // skin
-// @import "minimal-mistakes"; // main partials
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
 
 
 
