--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,9 @@ $global-font-family : $sans-serif;
 $header-font-family : $monospace;
 
 $primary-color: #0f7;
+$link-color: white;
+$link-color-hover: #0f7;
+
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
