--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -10,6 +10,7 @@
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
   z-index: 20;
+  $background-color: white;
 
   &__inner-wrap {
     @include clearfix;
@@ -24,6 +25,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-family: $monospace;
+    $text-color: black;
 
     @include breakpoint($x-large) {
       max-width: $max-width;
