--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,15 +4,14 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-      	<a class="site-title" href="{{ '/' | absolute_url }}"><img src="android-chrome-192x192.png"></a>
 
-        <!-- {% unless logo_path == empty %}
-          <a class="site-logo" href="{{ '/' | absolute_url }}"><img src="android-chrome-192x192.png" alt="{{ site.masthead_title | default: site.title }}"></a>
+{% unless logo_path == empty %}
+          <a class="site-logo" href="{{ '/' | absolute_url }}"><img src="" alt="{{ site.masthead_title | default: site.title }}"></a>
         {% endunless %}
         <a class="site-title" href="{{ '/' | relative_url }}">
           {{ site.masthead_title | default: site.title }}
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
-        </a> -->
+        </a>
 
 
         <ul class="visible-links">
