--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 // ----- Font ----- //
 
 /* system typefaces */
-$sans-serif : "Overpass", sans-serif;
+$sans-serif : "Lato", sans-serif;
 $monospace  : "Share Tech Mono", monospace;
 
 $global-font-family : $sans-serif; 
