--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
 
 /* system typefaces */
 $sans-serif : "Lato", sans-serif;
-$monospace  : "Share Tech Mono", monospace;
+$monospace  : "Share Tech", monospace;
 
 $global-font-family : $sans-serif; 
 $header-font-family : $monospace;
