--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,8 +8,8 @@
 // ----- Font ----- //
 
 /* system typefaces */
-$sans-serif : "Lato", sans-serif;
-$monospace  : "Share Tech", monospace;
+$sans-serif : "Roboto", sans-serif;
+$monospace  : "Share Tech Mono", monospace;
 
 $global-font-family : $sans-serif; 
 $header-font-family : $monospace;
