--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -25,7 +25,6 @@
 
     &:hover {
       opacity: 1;
-      color: $link-color-hover;
     }
 
     &.sticky {
@@ -55,7 +54,11 @@
     font-family: $sans-serif-narrow;
   }
 
-  p,
+  p {
+    font-family: $sans-serif
+    font-size: $type-size-5;
+  }
+
   li {
     font-family: $monospace;
     font-size: $type-size-6;
@@ -63,7 +66,7 @@
   }
 
   img {
-    width: 100%;
+    width: 80%;
 
     &.emoji {
       width: 20px;
