--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@
 $sans-serif : "Overpass", sans-serif;
 $monospace  : "Share Tech Mono", monospace;
 
-$global-font-family : $sans-serif; 
+$global-font-family : $serif; 
 $header-font-family : $monospace;
 
 $primary-color: blue;
@@ -20,7 +20,7 @@ $link-color-hover: blue;
 
 .sidebar{
   p {
-    font-family: $sans-serif
+    font-family: $sans-serif;
     font-size: $type-size-5;
   }
 
