--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 // ----- Font ----- //
 
 /* system typefaces */
+$serif      : "PT Serif", Georgia, Times, serif;
 $sans-serif : "Overpass", sans-serif;
 $monospace  : "Share Tech Mono", monospace;
 
