--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,17 +4,6 @@
 
 @charset "utf-8";
 
-
-// ----- Font ----- //
-
-/* system typefaces */
-$serif      : "PT Serif", Georgia, Times, serif;
-$sans-serif : "Overpass", sans-serif;
-$monospace  : "Share Tech Mono", monospace;
-
-$global-font-family : $serif; 
-$header-font-family : $monospace;
-
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'contrast' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
