--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,13 @@
 
 @charset "utf-8";
 
+$link-color: red;
+
+$serif     : "PT Serif", Georgia, Times, serif;
+$monospace : "Share Tech Mono", monospace; 
+
+$global-font-family : $serif;
+$header-font-family : $monospace;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
