--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 
-<link href="https://fonts.googleapis.com/css2?family=T+Sans+Narrow:400,700|PT+Serif:400,700,400italic&family=Overpass:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Share+Tech+Mono&display=swap" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Share+Tech+Mono&display=swap" rel="stylesheet" type="text/css">
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png">
