--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,14 @@ $global-font-family : $sans-serif;
 $header-font-family : $monospace;
 
 
+// Masthead
+.masthead__inner-wrap{
+	background-color: limegreen;
+}
+.site-title{
+	font-family: $monospace;
+}
+
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
