--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -16,7 +16,7 @@ $indent-var: 1.3em !default;
 $sans-serif: "Overpass", sans-serif !default;
 $monospace : "Share Tech Mono", monospace !default; 
 $serif: Georgia, Times, serif !default;
-// $sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+// $sans-serif: "Overpass", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
 //   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 // $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
@@ -113,7 +113,7 @@ $youtube-color: #bb0000 !default;
 $xing-color: #006567 !default;
 
 /* links */
-$link-color: mix(#000, $info-color, 20%) !default;
+$link-color: blue; //mix(#000, $info-color, 20%) !default;
 $link-color-hover: mix(#000, $link-color, 25%) !default;
 $link-color-visited: mix(#fff, $link-color, 15%) !default;
 $masthead-link-color: $primary-color !default;
