--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,8 +9,9 @@
 // Masthead
 $masthead-link-color: white;
 
-
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-
+figcaption{
+    font-family: $sans-serif;
+}
