--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -36,14 +36,14 @@ $header-font-family: $monospace !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~20px
-$type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+$type-size-1: 1.953em !default; // ~31.248px
+$type-size-2: 1.563em !default; // ~25.008px
+$type-size-3: 1.25em !default; // ~20px
+$type-size-4: 1em !default; // ~16px
+$type-size-5: 0.75em !default; // ~12px
+$type-size-6: 0.6875em !default; // ~11px
+$type-size-7: 0.625em !default; // ~10px
+$type-size-8: 0.5em !default; // ~8px
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
@@ -70,7 +70,7 @@ $text-color: $dark-gray !default;
 $muted-text-color: mix(#fff, $text-color, 20%) !default;
 $border-color: $lighter-gray !default;
 $form-background-color: $lighter-gray !default;
-$footer-background-color: $lighter-gray !default;
+$footer-background-color: $dark-gray !default;// $lighter-gray !default;
 
 $primary-color: #6f777d !default;
 $success-color: #3fa63f !default;
